Project tienda_abarrotes {
  database_type: 'PostgreSQL'
  Note: 'Modelo resumido; las migraciones Flyway son la fuente ejecutable.'
}

Table organization.branches {
  branch_id uuid [pk]
  code varchar [unique, not null]
  name varchar [not null]
  timezone varchar [not null]
}

Table organization.warehouses {
  warehouse_id uuid [pk]
  branch_id uuid [not null, ref: > organization.branches.branch_id]
  code varchar [not null]
  name varchar [not null]
}

Table catalog.products {
  product_id uuid [pk]
  name varchar [not null]
  status varchar [not null]
}

Table catalog.product_presentations {
  product_presentation_id uuid [pk]
  product_id uuid [not null, ref: > catalog.products.product_id]
  sku varchar [unique, not null]
}

Table inventory.stock_balances {
  stock_balance_id uuid [pk]
  warehouse_id uuid [not null, ref: > organization.warehouses.warehouse_id]
  product_presentation_id uuid [not null, ref: > catalog.product_presentations.product_presentation_id]
  on_hand_quantity decimal [not null]
  reserved_quantity decimal [not null]
  allocated_quantity decimal [not null]
}

Table sales.sales_orders {
  sales_order_id uuid [pk]
  branch_id uuid [not null, ref: > organization.branches.branch_id]
  channel varchar [not null]
  status varchar [not null]
  total decimal [not null]
}

